--- a/death-star/src/main/resources/client/assets/css/enforcer.css
+++ b/death-star/src/main/resources/client/assets/css/enforcer.css
@@ -1,27 +1,34 @@
 html,
 html,
 body {
-    background-color: #2d2d2d;
+    background-color: #b0bec5;
+    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 400;
+    font-size: 0.9em;
 }
 
-#logo {
-    margin-top: -2px;
-    color: #222222;
-}
 
-.list {
+/*.list {
     list-style-type: none;
-    float: left;
-    margin: 35px 5px 80px;
-    padding: 4px 3px 3px 3px;
-    position: relative;
-    width: 300px;
+    height:1000px;
 }
+
+.dropArea {
+     width: 300px;
+     height: 1000px;
+     display: block;
+     margin: 35px 5px 80px;
+     padding: 4px 3px 3px 3px;
+     float:left;
+     position: relative;
+ }
+
+
 
 .list-area {
     position: absolute;
-    left: 0;
-    top: 0;
+    left: 5%;
+    top: 5%;
     bottom: 0;
     overflow-x: auto;
     overflow-y: hidden;
@@ -30,6 +37,7 @@ body {
 .list-wrapper {
     padding: 10px;
     display: inline-flex;
+    border-color: #c4e3f3;
 }
 
 .navbar {
@@ -37,6 +45,20 @@ body {
     -moz-box-shadow: 0 7px 30px 2px #000;
     -webkit-box-shadow: 0 7px 30px 2px #000;
     box-shadow: 0 7px 30px 2px #000;
+}
+
+.titlebox {
+    width: 100%;
+    height: 100px;
+    position: absolute;
+}
+
+.titlelogo {
+    position: relative;
+    width: 15%;
+    height: 50px;
+    margin: 25px auto;
+    padding-top: 10px;
 }
 
 .status {
@@ -49,32 +71,33 @@ body {
     padding: 10px;
     margin: 3px;
     cursor: pointer;
-}
+}*/
 
-.report .title {
+/*.report .title {
     font-size: 24px;
     margin: 0 0 0px;
 }
 
 .report:hover {
     opacity: 0.9;
-}
+}*/
 
-.type-bar {
+/*.type-bar {
     height: 5px;
     width: 100%;
-}
+    margin-bottom: 10px;
+}*/
 
 .New {
-    background-color: #000000;
+    background-color: #1976d2; /* blue */
 }
 
 .Acknowledged {
-    background-color: #ffff00;
+    background-color: #388e3c; /* green */
 }
 
 .Escalated {
-    background-color: #ff0000;
+    background-color: #d32f2f; /* red */
 }
 
 .History {
