--- a/death-star/src/main/resources/client/src/enforcer/dashboard/templates/dashboard.html
+++ b/death-star/src/main/resources/client/src/enforcer/dashboard/templates/dashboard.html
@@ -1,5 +1,5 @@
 
-<div class="container">
+<div class="container" ng-controller="DashboardCtrl">
     <div class="row">
 
         <!-- New Column -->
