--- a/death-star/src/main/resources/client/src/enforcer/dashboard/templates/settings.html
+++ b/death-star/src/main/resources/client/src/enforcer/dashboard/templates/settings.html
@@ -1,56 +1,12 @@
-<!-- App Settings Modal -->
-<div class="modal-content">
-    <h4 class="grey-text text-darken-1">Application Settings</h4>
-    <div class="row"></div>
-    <h5 class="grey-text text-darken-1" style="margin-left:4.165%;">Time Settings</h5>
-    <div class="row">
-        <div class="col s4 offset-s1">
-            <p class="range-field" ng-focus="blah()">
-                <label for="missing-time">Time for Missing Hosts (in seconds)</label>
-                <input type="range" id="missing-time" min="{{missingTime.floor}}" max="{{missingTime.ceil}}" ng-model="missingTime.temp"/>
-            </p>
-        </div>
-        <div class="col s4 offset-s1">
-            <p class="range-field">
-                <label for="statusScan-time">Time for Status Scan (in seconds)</label>
-                <input type="range" id="statusScan-time" min="{{statusScanTime.floor}}" max="{{statusScanTime.ceil}}" ng-model="statusScanTime.temp"/>
-            </p>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col s4 offset-s1">
-            <p class="range-field">
-                <label for="dead-time">Time for Dead Hosts (in minutes)</label>
-                <input type="range" id="dead-time" min="{{deathTime.floor}}" max="{{deathTime.ceil}}" ng-model="deathTime.temp"/>
-            </p>
-        </div>
-        <div class="col s4 offset-s1">
-            <p class="range-field">
-                <label for="escalation-time">Time for Escalation (in minutes)</label>
-                <input type="range" id="escalation-time" min="{{escalationTime.floor}}" max="{{escalationTime.ceil}}" ng-model="escalationTime.temp"/>
-            </p>
-        </div>
-    </div>
-
-    <h5 class="grey-text text-darken-1" style="margin-left:4.165%;">Other Settings</h5>
-    <div class="row">
-        <div class="col s4 offset-s1">
-
-            <label for="auto-escalation">Auto-Escalation</label>
-            <div class="switch" id="auto-escalation">
-                <label>
-                    Off
-                    <input ng-model="autoEscalation.temp" type="checkbox" i>
-                    <span class="lever"></span>
-                    On
-                </label>
-            </div>
-        </div>
-    </div>
-
-</div>
-<div class="modal-footer">
-    <a ng-click="restoreSettings()" class="modal-action modal-close waves-effect waves-red btn-flat">Cancel</a>
-    <a ng-click="saveSettings()" class="modal-action modal-close waves-effect waves-green btn-flat">Save</a>
+<!-- Settings button -->
+<div class="fixed-action-btn" style="bottom: 45px; right: 24px;" ng-controller="SettingsCtrl">
+    <a class="btn-floating btn-large red darken-1">
+        <i class="large material-icons">settings</i>
+    </a>
+    <ul>
+        <li><a href="#modal3" class="btn-floating blue modal-trigger tooltipped" data-delay="25" data-tooltip="User Profile" data-position="left"><i class="material-icons">perm_identity</i></i></a></li>
+        <li><a href="#modal2" class="btn-floating pink modal-trigger tooltipped" data-delay="25" data-tooltip="Change Log" data-position="left"><i class="material-icons">view_list</i></a></li>
+        <li><a ng-click="openSettings()" class="btn-floating purple tooltipped" data-delay="25" data-tooltip="App Settings" data-position="left"><i class="material-icons">settings_applications</i></a></li>
+        <li><a id="connectionStatus" class="btn-floating red tooltipped" data-delay="25" data-tooltip="Connection: {{connection}}" data-position="left"><i class="material-icons">settings_ethernet</i></a></li>
+    </ul>
 </div>
