--- a/death-star/src/main/resources/client/assets/css/enforcer.css
+++ b/death-star/src/main/resources/client/assets/css/enforcer.css
@@ -9,18 +9,22 @@ body {
 
 .New {
     background-color: #1976d2; /* blue */
+    color: #1976d2;
 }
 
 .Acknowledged {
     background-color: #388e3c; /* green */
+    color: #388e3c;
 }
 
 .Escalated {
     background-color: #d32f2f; /* red */
+    color: #d32f2f;
 }
 
 .History {
     background-color: #808080;
+    color: #808080;
 }
 
 .report-details {
