--- a/death-star/src/main/resources/client/assets/css/enforcer.css
+++ b/death-star/src/main/resources/client/assets/css/enforcer.css
@@ -28,16 +28,20 @@ body {
 }
 
 .report-drop {
+    display: block;
     font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 200%;
-    borer-radius: 2px;
+    border-radius: 2px;
+    border: 2px solid #FFF;
     background-color: rgba(0, 0, 0, 0.3);
     position: fixed;
-    padding-left: 2%;
-    padding-right: 2%;
+    padding-left: 5%;
+    padding-right: 5%;
     width: 25%;
-    height:20%;
+    height: 20%;
     top: 70%;
+    left: 0%;
     margin-left: 37.5%;
     margin-right: 37.5%;
+    text-align: center;
 }
