--- a/death-star/src/main/resources/client/src/enforcer/dashboard/templates/auditTrail.html
+++ b/death-star/src/main/resources/client/src/enforcer/dashboard/templates/auditTrail.html
@@ -1,34 +1,31 @@
 <div class="modal-content">
     <h4 class="grey-text text-darken-1">Change Log</h4>
-    <ul>
-        <li ng-repeat="audit in auditTrail">
-            <div class="row">
-                <div class="col s2 offset-s1" style="margin-top:2.1%"><h6 ng-bind="audit.movedTime | date:'EEE d MMM y - h:mm:ss a'">{{audit.movedTime | date:'EEE d MMM y - h:mm:ss a'}}</h6></div>
-                <div class="col s1"><i class="large material-icons">account_circle</i><p style="float:bottom">{{audit.userAcf2Id}}</p></div>
-                <div class="col s2">
-                    <div class="card white hoverable" style="transform: scale(0.75); margin-top:-5%">
-                        <div class="card-content black-text">
-                            <span class="card-title black-text"><strong>{{audit.processId}} | [{{audit.host}}]</strong></span>
-                            <div class="type-bar {{audit.oldStatus}}"></div>
-                            <p>{{audit.mainClass}}</p>
-                            <p>{{audit.processStateChange}}</p>
-                            <p class="right-align">{{audit.timeStamp}}</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s1" style="margin-top:2.5%"><a class="waves-effect waves-light btn purple">Moved-></a></div>
-                <div class="col s2">
-                    <div class="card white hoverable" style="transform: scale(0.75); margin-top:-5%">
-                        <div class="card-content black-text">
-                            <span class="card-title black-text"><strong>{{audit.processId}} | [{{audit.host}}]</strong></span>
-                            <div class="type-bar {{audit.newStatus}}"></div>
-                            <p>{{audit.mainClass}}</p>
-                            <p>{{audit.processStateChange}}</p>
-                            <p class="right-align">{{audit.timeStamp}}</p>
-                        </div>
-                    </div>
-                </div>
+    <div ng-repeat="audit in auditTrail" class="row valign-wrapper">
+        <div class="center-align col s2">
+            <i class="large material-icons">account_circle</i>
+            <p class="text-gray bold" style="bottom: 0; font-weight: bold;">{{audit.userAcf2Id}}</p>
+        </div>
+        <div class="card white col s3" >
+            <div class="card-content black-text">
+                <span class="card-title black-text"><strong>{{audit.processId}} | [{{audit.host}}]</strong></span>
+                <div class="type-bar {{audit.oldStatus}}"></div>
+                <p>{{audit.mainClass}}</p>
+                <p>{{audit.processStateChange}}</p>
+                <p class="right-align">{{audit.timeStamp | date: 'yyyy/MM/dd HH:mm:ss'}}</p>
             </div>
-        </li>
-    </ul>
+        </div>
+        <div class="col s3 center-align">
+            <i class="large material-icons">trending_flat</i>
+            <p style="font-weight: bold;">{{audit.timeStamp}}</p>
+        </div>
+        <div class="card white col s3" >
+            <div class="card-content black-text">
+                <span class="card-title black-text"><strong>{{audit.processId}} | [{{audit.host}}]</strong></span>
+                <div class="type-bar {{audit.newStatus}}"></div>
+                <p>{{audit.mainClass}}</p>
+                <p>{{audit.processStateChange}}</p>
+                <p class="right-align">{{audit.timeStamp | date: 'yyyy/MM/dd HH:mm:ss'}}</p>
+            </div>
+        </div>
+    </div>
 </div>
