Vader Update, Dashboard Update, DeathStar Update
Vader Update:
- Multiple metrics can be monitored by a single Vader instance (given
the correct graphite metric path).
DeathStar Update:
- REST architecture for metrics
Dashboard Update:
- Currently being refactored to further benefit from Angular
- Now displays Card instances rather than Report's to accommodate
multiple types of information
- New MetricService
- CSS, HTML tweaks to handle Cards

--- a/death-star/src/main/resources/client/assets/css/enforcer.css
+++ b/death-star/src/main/resources/client/assets/css/enforcer.css
@@ -45,3 +45,13 @@ body {
     margin-right: 37.5%;
     text-align: center;
 }
+/* Card Decorators */
+.Metric {
+    background-color: #323232 !important;
+    color: #FFFFFF !important;
+}
+
+.Report {
+    background-color: #FFFFFF !important;
+    color: #000000 !important;
+}
