--- a/death-star/src/main/resources/client/src/enforcer/dashboard/templates/auditTrail.html
+++ b/death-star/src/main/resources/client/src/enforcer/dashboard/templates/auditTrail.html
@@ -5,12 +5,12 @@
             <i class="large material-icons">account_circle</i>
             <p class="text-gray bold" style="bottom: 0; font-weight: bold;">{{audit.userAcf2Id}}</p>
         </div>
-        <div class="card white col s3" >
-            <div class="card-content black-text">
-                <span class="card-title black-text"><strong>{{audit.processId}} | [{{audit.host}}]</strong></span>
+        <div class="card {{audit.type}} col s3" >
+            <div class="card-content">
+                <span class="card-title"><strong>{{audit.header}} | [{{audit.headerDetail}}]</strong></span>
                 <div class="type-bar {{audit.oldStatus}}"></div>
-                <p>{{audit.mainClass}}</p>
-                <p>{{audit.processStateChange}}</p>
+                <p>{{audit.classPath}}</p>
+                <p>{{audit.detail}}</p>
                 <p class="right-align">{{audit.timeStamp | date: 'yyyy/MM/dd HH:mm:ss'}}</p>
             </div>
         </div>
@@ -18,12 +18,12 @@
             <i class="large material-icons">trending_flat</i>
             <p style="font-weight: bold;">{{audit.timeStamp}}</p>
         </div>
-        <div class="card white col s3" >
-            <div class="card-content black-text">
-                <span class="card-title black-text"><strong>{{audit.processId}} | [{{audit.host}}]</strong></span>
+        <div class="card {{audit.type}} col s3" >
+            <div class="card-content">
+                <span class="card-title"><strong>{{audit.header}} | [{{audit.headerDetail}}]</strong></span>
                 <div class="type-bar {{audit.newStatus}}"></div>
-                <p>{{audit.mainClass}}</p>
-                <p>{{audit.processStateChange}}</p>
+                <p>{{audit.classPath}}</p>
+                <p>{{audit.detail}}</p>
                 <p class="right-align">{{audit.timeStamp | date: 'yyyy/MM/dd HH:mm:ss'}}</p>
             </div>
         </div>
